# simple-modern-uv-gitlab

./: .gitignore  .gitlab-ci.yml  README.md  copier.yml  pyproject.toml  updating.md
src/simple_modern_uv_gitlab/: cli.py
template/: .gitignore  .gitlab-ci.yml.jinja  .pre-commit-config.yaml  CONTRIBUTING.md.jinja  Dockerfile.jinja  Makefile  README.md.jinja  pyproject.toml.jinja  pytest.ini.jinja
template/.cursor/rules/: python-standards.mdc
template/.cursor/skills/bump-version/: SKILL.md
template/.cursor/skills/update-readme/: SKILL.md
template/.cursor/skills/write-tests/: SKILL.md
template/.devcontainer/: Dockerfile.jinja  devcontainer.json.jinja
