[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simple-modern-uv-gitlab"
version = "0.1.0"
description = "A minimal, modern Python project template using uv and copier"
authors = [{ name = "changeme", email = "changeme@example.com" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "copier>=9.4.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
]

[project.urls]
Repository = "https://github.com/changeme/simple-modern-uv"

[project.scripts]
simple-modern-uv-gitlab = "simple_modern_uv_gitlab.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/simple_modern_uv_gitlab"]

[tool.hatch.build.targets.wheel.force-include]
"copier.yml" = "simple_modern_uv_gitlab/copier.yml"
"template" = "simple_modern_uv_gitlab/template"

[tool.ruff]
line-length = 100
